# Scheduler

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: coverage.yml  doc.yml  pytest.yml  release.yml  ruff.yml  typecheck.yml
docs/: Makefile  conf.py  human-flexible-review.rst  index.rst  quickstart.rst
docs/api/: human-flexible-time.rst  human-solver-parameters.rst  human.rst  index.rst  scheduler.rst
examples/: __init__.py  demo.py  human_daily_demo.py  human_daily_review.py  human_tuning_webui.py  satisfaction_demo.py
humancompiler_scheduler/: __init__.py  constraints.py  io.py  solvers.py
humancompiler_scheduler/human/: __init__.py  api.py  io.py  model.py  report.py  review.py  solver.py  weekly.py
samples/: sample.yaml
samples/human/: daily_basic.yaml  daily_deadline_pressure.yaml  daily_dependencies.yaml  daily_flexible_block_candidates.yaml  daily_flexible_fixed_events.yaml  daily_flexible_normal.yaml  daily_flexible_rolling.yaml  daily_flexible_split_policy.yaml  daily_mixed_energy.yaml
samples/human/data/: humancompiler_common_database.yaml  taskagent_common_database.yaml
scheduler/: __init__.py  constraints.py  costs.py  io.py  model.py  solvers.py
scheduler/human/: __init__.py  io.py  model.py  report.py  review.py  solver.py
tests/: __init__.py  test_human_daily_phase1.py  test_human_models.py  test_human_tuning_webui.py  test_human_weekly.py  test_human_weekly_optional_dependency.py  test_solvers.py
