[project]
name = "taskagent-scheduler"
version = "0.1.0"
description = "A general purpose scheduling solver"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0",
]

[project.optional-dependencies]
cp-sat = ["ortools>=9.6"]

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scheduler"]
